--- a/packages/components/src/stepper/style.scss
+++ b/packages/components/src/stepper/style.scss
@@ -1,5 +1,5 @@
 .woocommerce-stepper {
-	background: #fff;
+	background: $muriel-white;
 	box-shadow: $muriel-box-shadow-1dp;
 	display: flex;
 	justify-content: space-around;
@@ -21,26 +21,27 @@
 			display: none;
 		}
 
-		&:not(.is-vertical).woocommerce-stepper_step-label {
-			margin: 0 4px 0 4px;
-		}
-
 		.woocommerce-spinner {
 			display: block;
 			margin-left: -$gap-smaller;
 			margin-right: $gap-smallest;
 		}
 
+		.woocommerce-spinner__circle {
+			stroke: $muriel-hot-blue-500;
+		}
+
 		&.is-active,
 		&.is-complete {
 			.woocommerce-stepper__step-icon {
-				background: $muriel-gray-900;
+				background: $muriel-hot-blue-500;
+				color: $muriel-white;
 			}
 		}
 
 		&.is-active {
 			font-weight: 600;
-			.woocommerce-stepper_step-label {
+			.woocommerce-stepper__step-label {
 				margin: 0;
 			}
 		}
@@ -63,8 +64,8 @@
 		height: 24px;
 		min-width: 24px;
 		margin-right: $gap-small;
-		background: $muriel-gray-300;
-		color: #fff;
+		background: $muriel-gray-50;
+		color: $muriel-gray-600;
 		border-radius: 50%;
 	}
 
@@ -78,7 +79,7 @@
 	}
 
 	@include breakpoint( '<782px' ) {
-		.woocommerce-stepper_step-label {
+		.woocommerce-stepper__step-label {
 			display: none;
 			padding-top: 24px;
 		}
@@ -98,7 +99,7 @@
 			margin-left: 24px;
 		}
 
-		.woocommerce-stepper_step-label {
+		.woocommerce-stepper__step-label {
 			display: initial;
 		}
 
